Composer.json name project update

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name":"devyz/devyzi",
+  "name":"devyzi/devyzi",
   "description": "Devyzi Framework.",
   "keywords": ["framework", "devyzi"],
   "license": "MIT",
