--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   "require": {
     "php":">=5.5.9",
     "illuminate/view": "5.2.*",
-    "illuminate/html": "5.*"
+    "illuminate/html": "5.*",
+    "devyzi/framework": "^0.0.4"
   },
   "require-dev": {
     "symfony/css-selector": "2.8.*|3.0.*",
